# world-happiness-dashboard

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: data_management.py  main.py
app/.streamlit/: config.toml
app/pages/: contibuting_factors_page.py  top_ten_page.py  trend_page.py
