[project]
name = "world-happiness-dashboard"
version = "0.1.0"
description = """World Happiness Dashboard
A Streamlit app to visualize the World Happiness Report data."""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "streamlit>=1.45.0",
]
